--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@noriginmedia/react-spatial-navigation": "^2.12.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
