--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@noriginmedia/react-spatial-navigation": "^2.12.9",
+    "i18next": "^25.8.10",
+    "i18next-browser-languagedetector": "^8.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0"
   },
